--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,6 @@ twitter_username: disenbygg
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-minimal
 plugins:
   - jekyll-feed
