--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Disen Bygg
 email: kontakt@disenbygg.no
+phone: 905 61 296
+address: Kolderups vei 2A, 0587 Oslo
 description: >-
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, ex, recusandae. Facere modi sunt, quod quibusdam.
 baseurl: ""
 url: "http://disenbygg.no"
 
@@ -17,6 +17,6 @@ twitter_username: disenbygg
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-minimal
+theme: minima
 plugins:
   - jekyll-feed
