--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Disen Bygg
-email: kontakt@disenbygg.no
+email: post@disenbygg.no
 phone: 905 61 296
 address: Kolderups vei 2A, 0587 Oslo
 description: >-
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, ex, recusandae. Facere modi sunt, quod quibusdam.
+  Disen Bygg er en byggentreprenør som utfører arbeider innen rehabilitering, velikehold og nybygg i Stor-Oslo området.
 baseurl: ""
 url: "http://disenbygg.no"
 
