added favicon, removed fade in and changed background color

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title: Disen Bygg
 email: post@disenbygg.no
 phone: 905 61 296
 address: Kolderups vei 2A, 0587 Oslo
+google_maps_link: https://goo.gl/maps/i5VDpDau7y1rJMmT8
 description: >-
   Disen Bygg er en byggentreprenør som utfører arbeider innen rehabilitering, velikehold og nybygg i Stor-Oslo området.
 baseurl: ""
